--- a/.github/workflows/ldap-rbac-uplift.yml
+++ b/.github/workflows/ldap-rbac-uplift.yml
@@ -15,6 +15,8 @@ jobs:
         name: Create ECS Task in delius-core ${{ github.event.inputs.environment }}
         runs-on: ubuntu-latest
         environment: delius-core-${{ github.event.inputs.environment }}
+        permissions:
+          id-token: write
         steps:
           - name: Checkout code
             uses: actions/checkout@v4
