--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -141,6 +141,7 @@ jobs:
           sparse-checkout: |
             playbooks/oracle_restore_points
             playbooks/block_sessions
+            playbooks/oracle_password_rotation
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
