--- a/.github/workflows/oracle-db-statspack-setup.yml
+++ b/.github/workflows/oracle-db-statspack-setup.yml
@@ -1,5 +1,5 @@
 name: "Oracle: Statspack Setup"
-run-name: "Oracle: ${{ github.event.inputs.TargetEnvironment }}_statspack_setup"
+run-name: "Oracle: ${{ github.event.inputs.TargetEnvironment }}-statspack-setup"
 on:
   workflow_dispatch:
     inputs:
@@ -77,7 +77,7 @@ jobs:
         with:
           repository: ministryofjustice/hmpps-delius-operational-automation
           sparse-checkout-cone-mode: false
-          sparse-checkout: playbooks/oracle-db-statspack-setup
+          sparse-checkout: playbooks/oracle_statspack
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
