--- a/.github/workflows/oracle-db-statspack-setup.yml
+++ b/.github/workflows/oracle-db-statspack-setup.yml
@@ -95,4 +95,4 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory \
           -e @$inventory/group_vars/${{ steps.prepareinventorynames.outputs.allHost }}.yml \
-          -e hosts=${{ steps.prepareinventorynames.outputs.hosts }}
+          -e target_hosts=${{ steps.prepareinventorynames.outputs.hosts }}
