--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -71,6 +71,7 @@ jobs:
             playbooks/oracle_ha
             playbooks/ansbile_controller
             playbooks/alfresco_wallet
+            playbooks/ansible.cfg
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
