Check input in bash

--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -103,6 +103,7 @@ jobs:
 
       - name: Check Restore DateTime Input
         if: ${{ github.event.inputs.RestoreDateTime != '' }}
+        shell: bash
         run: |
           isDateInvalid()
           {
