--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -10,4 +10,4 @@ inventory = ./hosts
 remote_tmp = /tmp
 
 # enable profiling of tasks
-callbacks_enabled = profile_tasks
+callbacks_enabled = ansible.posix.profile_tasks
