--- a/.github/workflows/oracle-db-logfile-housekeeping.yml
+++ b/.github/workflows/oracle-db-logfile-housekeeping.yml
@@ -76,7 +76,9 @@ jobs:
         with:
           repository: ministryofjustice/hmpps-delius-operational-automation
           sparse-checkout-cone-mode: false
-          sparse-checkout: playbooks/oracle_logfile_housekeeping
+          sparse-checkout: |
+                           playbooks/oracle_logfile_housekeeping
+                           playbooks/ansible.cfg
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
