--- a/.github/workflows/oracle-db-logfile-housekeeping.yml
+++ b/.github/workflows/oracle-db-logfile-housekeeping.yml
@@ -91,7 +91,7 @@ jobs:
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           aws-region: "eu-west-2"
 
-      - name: Run Statspack Setup Playbook
+      - name: Run Logfile Housekeeping Playbook
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory \
