Checkout delius_audited_interaction playbook/role

--- a/.github/workflows/oracle-db-snapshot-standby.yml
+++ b/.github/workflows/oracle-db-snapshot-standby.yml
@@ -75,6 +75,7 @@ jobs:
           sparse-checkout: |
             playbooks/oracle_snapshot_standby
             playbooks/oracle_ha
+            playbooks/delius_audited_interaction
             playbooks/ansible.cfg
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
