--- a/.github/workflows/oracle-db-release-update.yml
+++ b/.github/workflows/oracle-db-release-update.yml
@@ -130,6 +130,13 @@ jobs:
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
+      - name: Install yq
+        uses: dcarbone/install-yq-action@v1.1.1
+        with:
+            download-compressed: true
+            version: "v4.35.1"
+            force: true
+            
       - name: Count Standby Databases Configured In Ansible Inventory
         id: countstandbydbs
         working-directory: ${{ env.inventory }}
