--- a/playbooks/oracle_snapshot_standby/push_audit_data_to_primary.yml
+++ b/playbooks/oracle_snapshot_standby/push_audit_data_to_primary.yml
@@ -12,6 +12,9 @@
     register: delius_pool_password
     no_log: true
 
+  - debug: var=delius_app_schema_password
+  - debug: var=delius_pool_password
+  
   - name: Get Snapshot Standby Conversion Date
     script: get_snapshot_standby_restore_point.sh
     register: get_snapshot_standby_conversion_date
