--- a/playbooks/oracle_snapshot_standby/playbook.yml
+++ b/playbooks/oracle_snapshot_standby/playbook.yml
@@ -33,8 +33,8 @@
       tasks_from: determine-fsfo-targets.yml
     vars:
       delegation_host: "{{ primary_hostname }}"
-      standby1_hostname:  "{{ hostvars[groups[database_type + '_standbydb1'][0]]['inventory_hostname'] }}"
-      standby2_hostname:  "{{ hostvars[(groups[database_type + '_standbydb2']|default([]))[0]|default({})]['inventory_hostname'] | default('') }}"
+      standby1_hostname:  "{{ hostvars[groups[database_type + 'standbydb1'][0]]['inventory_hostname'] }}"
+      standby2_hostname:  "{{ hostvars[(groups[database_type + 'standbydb2']|default([]))[0]|default({})]['inventory_hostname'] | default('') }}"
   
   - name: Get Fast-Start Failover Status
     shell: |
