--- a/.github/workflows/oracle-db-licence-audit.yml
+++ b/.github/workflows/oracle-db-licence-audit.yml
@@ -12,6 +12,11 @@ on:
         type: string
         default: "main"
 
+env:
+  ansible_config: operations/playbooks/ansible.cfg
+  command: ansible-playbook operations/playbooks/oracle_licence_audit/audit.yml
+  inventory: inventory/ansible
+
 # Allow permissions on repository and docker image and OIDC token
 permissions:
   contents: read
@@ -35,5 +40,44 @@ jobs:
       - name: Check Vars Exist For Environment
         if: ${{ vars.AWS_ACCOUNT_ID  }}
         run: echo ${{ matrix.environment }} 
+
+      - name: Checkout Inventory From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/hosts
+            ansible/group_vars
+          path: inventory
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
+
+      - name: Checkout From hmpps-delius-operational-automation
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/hmpps-delius-operational-automation
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+              playbooks/oracle_licence_audit
+              playbooks/ansible.cfg
+          path: operations
+          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          fetch-depth: 0
+
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+          output-credentials: true
+
+      - name: Start Ansible Oracle Licence Audit
+        run: |
+          export ANSIBLE_CONFIG=$ansible_config
+          $command -i $inventory \
+          -e environment=${{ matrix.environment }}
 
           
