--- a/.github/workflows/oracle-db-licence-audit.yml
+++ b/.github/workflows/oracle-db-licence-audit.yml
@@ -27,19 +27,17 @@ jobs:
   deployment:
     name: oracle-licence-audit
     runs-on: ubuntu-latest
-    #container:
-    # image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
+    container:
+    image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
     strategy:
       matrix:
-        environment: [delius-core-dev,delius-core-test,delius-core-training,delius-core-stage,delius-core-pre-prod,delius-core-prod]
+        environment: [delius-core-dev]
+    #,delius-core-test,delius-core-training,delius-core-stage,delius-core-pre-prod,delius-core-prod]
     environment: ${{ matrix.environment }}
     timeout-minutes: 1440
     continue-on-error: false
-    steps:
 
-      - name: Check Vars Exist For Environment
-        if: ${{ vars.AWS_ACCOUNT_ID  }}
-        run: echo ${{ matrix.environment }} 
+    steps:
 
       - name: Checkout Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
@@ -64,6 +62,26 @@ jobs:
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
+
+     - name: Get Database Targets For Environment
+        id: databasetargets
+        working-directory: ${{ env.inventory }}
+        run: |
+          targets=""
+          environment="environment_name_$(echo ${{ matrix.environment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')"
+          build_targets() {
+            databasetype=${1}
+            high_availability_count=$(yq .high_availability_count.${databasetype} group_vars/${environment}_all.yml)
+            [ $high_availability_count -le 2 ] && targets="${targets}${prefix}_${databasetype}_primarydb,"
+            [ $high_availability_count -eq 1 ] && targets="${targets}${prefix}_${databasetype}_standbydb1,"
+            [ $high_availability_count -eq 2 ] && targets="${targets}${prefix}_${databasetype}_standbydb1,${prefix}_${databasetype}_standbydb2,"
+            echo
+          }
+          build_targets delius
+          build_targets mis
+          build_targets misboe
+          build_targets misdsd
+          echo "targets=$targets" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
         id: login-aws
