--- a/.github/workflows/oracle-db-licence-audit.yml
+++ b/.github/workflows/oracle-db-licence-audit.yml
@@ -103,8 +103,8 @@ jobs:
       - name: Start Ansible Oracle Licence Audit
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          $command -i $inventory \
+          $command \
           -e environment_name=${{ matrix.environment }} \
-          -e @$inventory/group_vars/${{ steps.databasetargets.outputs.allHost }}.yml
+          -e @$inventory/${{ steps.databasetargets.outputs.allHost }}.yml
 
           
