--- a/playbooks/oracle_licence_audit/audit/vars/main.yml
+++ b/playbooks/oracle_licence_audit/audit/vars/main.yml
@@ -1,4 +1,4 @@
-audit_dir: /home/oracle/admin/audit
+audit_dir: /tmp/audit
 audit_local_dir: "{{ audit_dir }}/{{ ansible_date_time.date }}"
 audit_local_file: "audit-{{ ansible_date_time.date }}.zip"
 weblogic_file: audit-weblogic.lst
