Create audit directory

--- a/playbooks/oracle_licence_audit/audit/tasks/audit-weblogic.yml
+++ b/playbooks/oracle_licence_audit/audit/tasks/audit-weblogic.yml
@@ -59,6 +59,11 @@
     path: "{{ weblogic_output }}"
     state: absent
 
+- name: Create audit directory
+  file:
+    path: "{{ audit_dir }}"
+    state: directory
+
 - name: Create weblogic results file
   file:
     path: "{{ weblogic_output }}"
