--- a/playbooks/oracle_licence_audit/audit.yml
+++ b/playbooks/oracle_licence_audit/audit.yml
@@ -1,8 +1,36 @@
-- name: Oracle audit scripts
-  hosts: localhost
-  # become: yes
-  # become_user: root
-  # become_method: sudo
+- name: Oracle Audit Databases
+  hosts: "{{ targets }}"
+  become: yes
+  become_user: root
+  become_method: sudo
   gather_facts: yes
-  roles:
-     - audit
+  tasks:
+
+  - name: Run Database Task
+    include_role:
+      name: audit
+      tasks_from: audit-database
+    when: audit is defined 
+
+- name: Oracle Audit Weblogic
+  hosts: localhost
+  gather_facts: yes
+  tasks:
+
+  - name: Run Weblogic Task
+    include_role:
+      name: audit
+      tasks_from: audit-weblogic
+    when: audit is defined
+
+- name: Run Upload To S3
+  hosts: localhost
+  gather_facts: no
+  tasks:
+
+  - name: Run Upload Task
+    include_role:
+      name: audit
+      tasks_from: audit-upload
+    when: upload is defined
+    
