--- a/.github/workflows/oracle-db-licence-audit.yml
+++ b/.github/workflows/oracle-db-licence-audit.yml
@@ -78,7 +78,7 @@ jobs:
           environment="environment_name_$(echo ${{ matrix.environment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')"
           build_targets() {
             databasetype=${1}
-            if [[ -e group_vars/${environment}_{{ databasetype}}_primarydb.yml ]]
+            if [[ -e group_vars/${environment}_${databasetype}_primarydb.yml ]]
             then
               high_availability_count=$(yq .high_availability_count.${databasetype} group_vars/${environment}_all.yml)
               [ $high_availability_count -le 2 ] && targets="${targets}${environment}_${databasetype}_primarydb,"
@@ -110,10 +110,10 @@ jobs:
           -e targets=${{ steps.databasetargets.outputs.targets }}
           -e environment_name=${{ matrix.environment }} \
           -e @$inventory/${{ steps.databasetargets.outputs.allHost }}.yml
-          -e audit=
+          -e audit=yes
 
       - name: Start Ansible Oracle Licence Audit Upload When Last Environment Processed
         if: ${{ strategy.job-index == 0 }}
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          $command -e upload=
+          $command -e upload=yes
