--- a/.github/workflows/oracle-db-licence-audit.yml
+++ b/.github/workflows/oracle-db-licence-audit.yml
@@ -106,7 +106,7 @@ jobs:
       - name: Start Ansible Oracle Licence Audit
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          $command \
+          $command -i $inventory \
           -e targets=${{ steps.databasetargets.outputs.targets }}
           -e environment_name=${{ matrix.environment }} \
           -e @$inventory/${{ steps.databasetargets.outputs.allHost }}.yml
