--- a/playbooks/oracle_licence_audit/audit.yml
+++ b/playbooks/oracle_licence_audit/audit.yml
@@ -1,5 +1,5 @@
 - name: Oracle Audit Databases
-  hosts: "{{ targets }}"
+  hosts: "{{ targets | default('localhost') }}"
   become: yes
   become_user: root
   become_method: sudo
