--- a/playbooks/oracle_licence_audit/audit/tasks/audit-weblogic.yml
+++ b/playbooks/oracle_licence_audit/audit/tasks/audit-weblogic.yml
@@ -89,3 +89,8 @@
   lineinfile:
     path: "{{ weblogic_output }}"
     line: "Vcpu Total: {{ total_vpcu }}"
+
+- name: Upload weblogic output file to S3
+  shell: |
+    export PATH=$PATH:/usr/local/bin
+    aws s3 cp {{ weblogic_output }} s3://{{ dependencies_bucket.name }}/{{ audit_output }}/
