--- a/.github/workflows/oracle-db-licence-audit.yml
+++ b/.github/workflows/oracle-db-licence-audit.yml
@@ -93,6 +93,10 @@ jobs:
           build_targets misdsd
           echo "targets=$targets" >> $GITHUB_OUTPUT
           echo "allHost=group_vars/${environment}_all" >> $GITHUB_OUTPUT
+          if [[ $((${{ strategy.job-index }} + 1 )) ==  ${{ strategy.job-total }} ]]
+          then
+            echo "lastjob=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Configure AWS Credentials
         id: login-aws
@@ -113,7 +117,8 @@ jobs:
           -e audit=yes
 
       - name: Start Ansible Oracle Licence Audit Upload When Last Environment Processed
-        if: ${{ strategy.job-index == 0 }}
+        if: ${{ steps.databasetargets.outputs.lastjob == 'true '}}
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          $command -e upload=yes
+          $command -e upload=yes \
+          -e @$inventory/${{ steps.databasetargets.outputs.allHost }}.yml
